# mock_derive

./: .gitignore  .travis.yml  LICENSE  README.md
mock_derive/: Cargo.toml
mock_derive/examples/: extern_functions.rs  generics.rs  simple.rs
mock_derive/examples/stable_or_nightly/: Cargo.toml
mock_derive/examples/stable_or_nightly/src/: lib.rs
mock_derive/src/: common_macros.rs  generator.rs  lib.rs  macros.rs  mock_method.rs  mock_trait.rs
tests/: Cargo.toml
tests/src/: advanced_traits.rs  database.rs  export.rs  export.rs.bk  foriegn_functions.rs  foriegn_functions_mod2.rs  generic_tests.rs  generics.rs  impl_mocks.rs  lib.rs  lib.rs.bk
