[package]
name = "mock_derive"
version = "0.5.0"
authors = ["DavidDeSimone <lord.good.mail@gmail.com>"]
description = "An easy to setup, rich mocking library for the Rust programming language."
repository = "https://github.com/DavidDeSimone/mock_derive"
readme  = "../README.md"
license = "MIT"
keywords = ["mock", "mocking", "unit-test", "testing"]
categories = ["development-tools::testing", "development-tools::procedural-macro-helpers"]

[dependencies]
quote = "0.3"
syn = { version = "0.11.11", features = ["full"] }
lazy_static = "0.2"

[lib]
proc-macro = true