[package]
name = "mock_derive"
version = "0.8.0"
authors = ["DavidDeSimone <lord.good.mail@gmail.com>"]
description = "An easy to setup, rich mocking library for the Rust programming language."
repository = "https://github.com/DavidDeSimone/mock_derive"
readme  = "../README.md"
license = "MIT"
keywords = ["mock", "mocking", "unit-test", "testing"]
categories = ["development-tools::testing", "development-tools::procedural-macro-helpers"]

[dependencies]
quote = "1.0.7"
syn = { version = "1.0.44", features = ["full"] }
proc-macro2 = "1.0"
lazy_static = "1.4.0"

[lib]
proc-macro = true